# GeoXCP

./: README.md  pyproject.toml
GeoConformal/: GeoConformal.py  __init__.py  geocp.py
GeoConformalizedExplainer/: GeoConformal.py  GeoConformalizedExplainer.py  __init__.py  model.py
data/: NYC_education.gpkg  chicago_health_index.csv  china_border.gpkg  china_sites_2018_05_PM2.5_all.csv  cincinnati_crime.csv  cincinnati_crime.gpkg  cincinnati_crime_4326.gpkg  coverage_rate.csv  coverage_rate_new.csv  lower_bounds.npy  model_trained.pth  nyc_income.csv  nyc_income.gpkg  seattle_sample_3k.gpkg  south_homicides.gpkg  upper_bounds.npy  us_election.csv  us_election.gpkg  us_life_expectancy.gpkg  yield_fertilizer_1999.csv  yield_fertilizer_1999.gpkg  yield_fertilizer_2001.csv  yield_fertilizer_2001.gpkg
examples/: ChicagoHealth.ipynb  ChinaPM25.ipynb  ChinaPM25accuracy_summary.csv  CincinnattiCrime.ipynb  SeattleHomeSaleUncertaintyGeoX.ipynb  SeattleHomeSaleUncertainty_bootstrap.ipynb  SeattleHomeSale_accuracy_summary.csv  SeattleHousePrice_RegionalSamples.ipynb  SoutheHomicides.ipynb  SoutheHomicides_accuracy_summary.csv  USElection.ipynb  USElection_accuracy_summary.csv  YieldAndFertilizer.ipynb  YieldAndFertilizer_accuracy_summary.csv  cells.gpkg  synthetic_true_model_validation.ipynb  synthetic_true_model_validation_visualization.ipynb  sythetic_data_xai_predictor_noise.ipynb  sythetic_true_model_validation_with_multi_level_noise.ipynb  sythetic_true_model_validation_with_multi_level_noises_lime.ipynb  sythetic_true_model_validation_with_noise.ipynb  (+4 more)
(+91 files in other folders)
